# Baba

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README_CN.md  baba.h  build_all.bat  build_all.sh  build_native.bat  build_native.sh  build_pypi.py  pyproject.toml  upload_pypi.bat  upload_pypi.sh
.github/workflows/: build.yml  ci.yml  publish.yml
artifacts/lib-linux/: _core.py
artifacts/lib-linux/include/layout/: layout.h
artifacts/lib-linux/include/render/: vulkan_renderer.h
artifacts/lib-linux/include/widgets/: button.h  label.h  textbox.h
artifacts/lib-macos/_ffi/: ffi_build.py
artifacts/lib-macos/include/: baba.h
artifacts/lib-windows/: __init__.py  _core.py
artifacts/lib-windows/_ffi/: ffi_build.py
artifacts/lib-windows/include/: baba.h
artifacts/lib-windows/include/core/: types.h  vec.h
artifacts/lib-windows/include/layout/: layout.h
artifacts/lib-windows/include/platform/: window.h
artifacts/lib-windows/include/render/: painter.h  vulkan_renderer.h
artifacts/lib-windows/include/theme/: theme.h
artifacts/lib-windows/include/widgets/: button.h  label.h  textbox.h  widget.h
cmake/: MacOSXBundleInfo.plist.in
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  C_DEVELOPMENT.md  LINUX_BUILD.md  LINUX_BUILD_CN.md  MACOS_BUILD.md  MACOS_BUILD_CN.md  TUTORIAL.md  TUTORIAL_CN.md  WINDOWS_BUILD.md  WINDOWS_BUILD_CN.md
examples/: CMakeLists.txt  calculator  calculator.c  calculator.py  calculator_standalone.m  csv_viewer  csv_viewer.c  demo  demo.c  demo_python.py  image_viewer  image_viewer.c  text_editor  text_editor.c
examples/windows/: README.md  README_CN.md  build.bat  main.c
python/: README.md  README_CN.md  demo.py  test.py
python/baba/: __init__.py
python/baba/_ffi/: ffi_build.py
python/baba/include/render/: painter.h
python/baba/include/widgets/: widget.h
python/baba_gui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_baba.py
src/: baba.c  baba.h
src/core/: app.c  types.h  vec.h  window.c
src/layout/: layout.c
src/platform/: platform.c  platform.h  stub.c  window.h
src/platform/linux/: wayland_surface.c  wayland_window.c  x11_surface.c  x11_window.c
src/platform/macos/: surface.m  window.m
src/platform/windows/: surface.c  window.c
src/render/: painter.c  vulkan_renderer.c
src/render/shaders/: frag.glsl  vert.glsl
src/theme/: theme.c  theme.h
src/widgets/: button.c  container.c  label.c  textbox.c  widget.c
