[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baba-gui"
version = "0.3.0"
description = "Simple cross-platform GUI library - pure Python, no compilation needed"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pyobjc>=9.0; sys_platform == 'darwin'",
]
keywords = ["gui", "cross-platform", "native", "simple", "lightweight"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/cycleuser/Baba"
Repository = "https://github.com/cycleuser/Baba.git"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
baba = ["*.py"]